# agent-skills

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  PLAN.md  README.md  pyproject.toml
.github/workflows/: release.yml  validate.yml
docs/: activation-matrix.md  adoption-guide.md  agentkit-guide.md  agentkit-security.md  architecture.md  cli-reference.md  config-reference.md  context-compiler-cache.md  evaluation-harness.md  hotspot-aware-context.md  installation.md  make-reference.md  model-routing-openai.md  public-contracts-1.0.md  quality-aware-routing.md  quality-ci.md  quality-diagnostics.md  quality-regression-gate.md  release-process.md  telemetry-budget.md  troubleshooting.md  upgrade-guide.md
evals/fixtures/python_service/: README.md  retry.py
evals/tasks/: python-local-bugfix.yaml
examples/: agentkit.toml  task-packet.yaml
schemas/: agent-capabilities.schema.json  completion.schema.json  plan.schema.json  review.schema.json  task-packet.schema.json  triage.schema.json  usage.schema.json
scripts/: normalize_sdist.py  repo_map.py  scan_secrets.py  validate_release.py  validate_skills.py  verify_reproducible_build.py
src/agentkit/: __init__.py  builtin.py  cli.py  commands.py  config.py  context_cache.py  context_compiler.py  contracts.py  doctor.py  entrypoint.py  executables.py  exit_codes.py  git.py  graphify.py  init_project.py  installation.py  models.py  operations.py  project_profile.py  prompts.py  redaction.py  release_resources.py  reporting.py  review.py  runner.py  state.py  telemetry.py  triage.py  verification.py
src/agentkit/adapters/: __init__.py  base.py  command.py
src/agentkit/evals/: __init__.py  cli.py  collector.py  config.py  manifest.py  models.py  redaction.py  reports.py  resources.py  runner.py
src/agentkit/model_runtime/: __init__.py  base.py  cli.py  config.py  integration.py  openai.py  resources.py  router.py
src/agentkit/quality/: __init__.py  base.py  baseline.py  ci_cli.py  ci_config.py  ci_runner.py  ci_summary.py  ci_workflow.py  cli.py  comparison.py  config.py  errors.py  gate.py  gate_models.py  hotspot_cli.py  hotspot_context.py  integration.py  lifecycle.py  models.py  parser.py  resources.py  resources_ci.py  resources_gate.py  resources_hotspot.py  resources_routing.py  routing.py  routing_cli.py  routing_config.py  routing_integration.py  service.py  strictacode.py  verification_plan.py
templates/: agentkit-quality.yml  change-plan.yaml  review-report.yaml
tests/: test_adapter.py  test_budget_runner.py  test_commands.py  test_completion_quality_gate.py  test_config.py  test_context_cache.py  test_context_compiler.py  test_context_config.py  test_context_makefile.py  test_eval_ci_smoke.py  test_eval_cli.py  test_eval_config.py  test_eval_manifest.py  test_eval_redaction.py  test_eval_reports.py  test_eval_resources.py  test_eval_runner.py  test_graphify_bootstrap.py  test_hotspot_context.py  test_hotspot_resources.py  test_init_project.py  test_installation_migration.py  test_model_runtime.py  test_model_runtime_resources.py  test_module_entrypoint.py  test_project_profile.py  test_quality_ci_cli.py  test_quality_ci_config.py  test_quality_ci_resources.py  test_quality_ci_runner.py  test_quality_ci_summary.py  test_quality_ci_workflow.py  test_quality_comparison.py  test_quality_config.py  test_quality_failure_artifacts.py  test_quality_gate.py  test_quality_gate_config.py  test_quality_gate_resources.py  test_quality_integration.py  test_quality_parser.py  (+20 more)
