[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-skills-engineering-kit"
version = "0.4.0"
description = "Graph-aware supervised autopilot with telemetry, phase context compilation, and SQLite caching"
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"
dependencies = [
  "graphifyy>=0.9.23,<1.0"
]

[project.scripts]
agentkit = "agentkit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
