[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-skills-engineering-kit"
version = "0.7.0"
description = "Quality-aware supervised autopilot with hotspot-ranked bounded context"
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"
dependencies = [
  "graphifyy>=0.9.23,<1.0"
]

[project.optional-dependencies]
quality = [
  "strictacode>=0.0.5,<0.1"
]

[project.scripts]
agentkit = "agentkit.entrypoint:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
